--- a/css/testPage.css
+++ b/css/testPage.css
@@ -8,7 +8,9 @@
 
 body
 {
-	background-image: url("../images/background.png");
+	background-image: url("../images/photo2.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
 #wrapper2{
